refactor: 清理未使用的导入和优化代码结构
style: 修复图标名称拼写错误和CSS属性

fix: 修正类型安全问题和泛型使用

perf: 移除冗余代码和优化工具类方法

docs: 更新配置类注解和属性配置方式